<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context="bunpro.jp.bunproapp.activities.LoginActivity">



    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:background="@drawable/box_shadow">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            style="@style/SpinKitView.Small.FadingCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:SpinKit_Color="@android:color/white"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/bg_login_entry"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:lines="1"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/bg_login_entry"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/login"
            android:textColor="@color/colorBlue"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/btnPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/privacy"
        android:textAllCaps="false"
        android:textColor="@color/colorBlue"
        android:background="@android:color/transparent"
        android:layout_marginTop="5dp"
        android:textSize="16sp"/>

</LinearLayout>