<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/transparent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">


            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/spin_kit"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                style="@style/SpinKitView.Small.FadingCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:SpinKit_Color="@android:color/white"/>

            <RelativeLayout
                android:id="@+id/rlFurigana"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:layout_marginTop="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bg_corner_left_right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/furigana"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvFurigana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorGrey"
                    android:text="Always"
                    android:textSize="16sp"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlHideEnglish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hide_english"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvHideEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorGrey"
                    android:text="No"
                    android:textSize="16sp"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlBunnyMode"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_corner_bottom_left_right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bunny_mode"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/tvBunnyMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorGrey"
                    android:text="Off"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_marginTop="10dp"
                android:text="@string/setting_description"/>


            <RelativeLayout
                android:id="@+id/rlSubscription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:background="@drawable/bg_login"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/subscription"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:text="Yes"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlCommunity"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_corner_left_right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/community"
                    android:textColor="@color/colorYellow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAbout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="@color/colorYellow"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlContact"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/contact"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPrivacy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorPrimaryDark">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="@string/privacy"
                    android:textColor="@color/colorYellow"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlTerms"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/bg_corner_bottom_left_right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/colorYellow"
                    android:text="@string/terms_and_conditions"
                    android:textSize="16sp"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlLogout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_width"
                android:background="@drawable/bg_logout"
                android:layout_marginTop="50dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textColor="@android:color/white"
                    android:text="@string/logout"
                    android:textSize="16sp"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>