<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <android.support.v7.widget.SearchView
                    android:id="@+id/svSearch"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    style="@style/SearchViewStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:background="#2e2e29">

                <info.hoang8f.android.segmented.SegmentedGroup
                    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/segmented"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    segmentedgroup:sc_border_width="2dp"
                    segmentedgroup:sc_corner_radius="3dp"
                    segmentedgroup:sc_checked_text_color="@android:color/black"
                    segmentedgroup:sc_tint_color="@color/colorBlue">

                    <RadioButton
                        android:id="@+id/rbAll"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/all"
                        style="@style/RadioButton" />
                    <RadioButton
                        android:id="@+id/rbUnlearned"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/unlearned"
                        style="@style/RadioButton"/>

                    <RadioButton
                        android:id="@+id/rbLearned"
                        android:layout_width="0dip"
                        android:layout_height="match_parent"
                        android:text="@string/learned"
                        android:layout_weight="1"
                        style="@style/RadioButton" />
                </info.hoang8f.android.segmented.SegmentedGroup>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/sfLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

</LinearLayout>